[tool.poetry]
name = "sf-edu-gh-actions"
version = "0.1.0"
description = "Practice for GitHub Actions"
authors = ["Dragon066 <NickTitov123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.5"
pytest = "^8.3.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''
